--- a/config/tiny_mce.yml
+++ b/config/tiny_mce.yml
@@ -1,6 +1,6 @@
 # Here you can specify default options for TinyMCE across all controllers
 #
-theme: advanced
+# theme: advanced
 # plugins:
 #  - table
 #  - fullscreen
