--- a/config/tiny_mce.yml
+++ b/config/tiny_mce.yml
@@ -1,6 +1,10 @@
 # Here you can specify default options for TinyMCE across all controllers
 #
-# theme: advanced
-# plugins:
-#  - table
-#  - fullscreen
+theme: advanced
+encoding: utf-8
+theme_advanced_resizing: true
+theme_advanced_resize_horizontal: false
+:theme_advanced_toolbar_location: top
+theme_advanced_buttons1 : "outdent,indent,cut,copy,paste,undo,redo,link,unlink,image,removeformat,formatselect"
+theme_advanced_buttons2 : "bold,italic,underline,strikethrough,justifyleft,justifycenter,justifyright,justifyfull,bullist,numlist,forecolor,backcolor,blockquote"
+theme_advanced_buttons3 : ""
