--- a/config/assets.yml
+++ b/config/assets.yml
@@ -1,4 +1,4 @@
-package_assets:         always          # (on, off, always)
+package_assets:         on          # (on, off, always)
 embed_assets:           off          # (on, off, datauri)
 compress_assets:        on          # (on, off)
 gzip_assets:            on          # (on, off)
