--- a/config/assets.yml
+++ b/config/assets.yml
@@ -4,7 +4,7 @@ compress_assets:        on          # (on, off)
 gzip_assets:            on          # (on, off)
 template_function:      _.template  # (defaults to the built-in micro-templating)
 package_path:           packages    # (defaults to assets)
-javascript_compressor:  yui     # (yui, closure)
+javascript_compressor:  yui         # (yui, closure)
 
 javascripts:
   workspace:
@@ -20,3 +20,4 @@ stylesheets:
     - public/stylesheets/style.css
     - public/stylesheets/jquery-ui-1.8.8.custom.css
     - public/stylesheets/facebox.css
+    - public/stylesheets/buttons.css
