--- a/config/assets.yml
+++ b/config/assets.yml
@@ -14,6 +14,8 @@ javascripts:
     - public/javascripts/facebox.js
     - public/javascripts/script.js
     - public/javascripts/plugins.js
+    - public/javascripts/jquery.indextank.autocomplete.js
+    - public/javascripts/jquery.indextank.ize.js
 
 stylesheets:
   workspace:
