--- a/config/assets.yml
+++ b/config/assets.yml
@@ -22,4 +22,5 @@ stylesheets:
     - public/stylesheets/facebox.css
     - public/stylesheets/buttons.css
     - public/stylesheets/grids.css
+    - public/stylesheets/page.css
     - public/stylesheets/login-registration.css
