render at the end functionality

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -19,6 +19,7 @@ javascripts:
     - public/javascripts/jquery.indextank.ajaxsearch.js
     - public/javascripts/jquery.indextank.autocomplete.js
     - public/javascripts/jquery.indextank.renderer.js
+    - public/javascripts/jquery.benvarim.search.autocomplete.js
     # - public/javascripts/jquery.autocomplete.js
 
 stylesheets:
