--- a/config/assets.yml
+++ b/config/assets.yml
@@ -1,4 +1,4 @@
-package_assets:         on          # (on, off, always)
+package_assets:         always          # (on, off, always)
 embed_assets:           off          # (on, off, datauri)
 compress_assets:        on          # (on, off)
 gzip_assets:            on          # (on, off)
@@ -8,7 +8,7 @@ javascript_compressor:  yui         # (yui, closure)
 
 javascripts:
   workspace:
-    - public/javascripts/jquery-ui-1.8.8.min.js
+    - public/javascripts/jquery-ui.min.js
     - public/javascripts/jquery.cookie.js
     - public/javascripts/jquery.condense.js
     - public/javascripts/facebox.js
@@ -22,7 +22,7 @@ javascripts:
     - public/javascripts/jquery.benvarim.search.autocomplete.js
     - public/javascripts/jquery.tmpl.min.js
     - public/javascripts/jquery.benvarim.facetsrenderer.js
-    # - public/javascripts/jquery.autocomplete.js
+    - public/javascripts/jquery.autocomplete.js
 
 stylesheets:
   workspace:
