--- a/config/assets.yml
+++ b/config/assets.yml
@@ -1,7 +1,7 @@
-package_assets:         on          # (on, off, always)
+package_assets:         off          # (on, off, always)
 embed_assets:           off          # (on, off, datauri)
-compress_assets:        on          # (on, off)
-gzip_assets:            on          # (on, off)
+compress_assets:        off          # (on, off)
+gzip_assets:            off          # (on, off)
 template_function:      _.template  # (defaults to the built-in micro-templating)
 package_path:           packages    # (defaults to assets)
 javascript_compressor:  yui         # (yui, closure)
