modularize polaroid template write model procedure total_fundraised improve user profile

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -46,3 +46,4 @@ stylesheets:
     - public/stylesheets/page.css
     - public/stylesheets/login-registration.css
     - public/stylesheets/tooltips.css
+    - public/stylesheets/tools.css
